Fixed horizontal scroll (tablet)

--- a/server/pages/assets/sass/base/typography.scss
+++ b/server/pages/assets/sass/base/typography.scss
@@ -31,7 +31,7 @@ a {
   border-bottom: 1px dotted;
   color: darken($color-primary, 10);
   text-decoration: none;
-  white-space: nowrap;
+
   &:hover {
     border-bottom: 1px solid;
   }
